# adium-gmail

./: Makefile  README.md  adium-gmail.cabal  stack.yaml
app/: Actions.hs  Main.hs  Opts.hs  Types.hs
specs/AdiumGM/: SpecsSpec.hs  TypesSpec.hs
src/AdiumGM/: Config.hs  Error.hs  Types.hs
src/AdiumGM/Actions/: Default.hs  Import.hs
