name:                adium-gmail
version:             0.0.0.0
synopsis:            Backs up Adium DMs to GMail.
description:         A CLI to back up Adium DMs to GMail.
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
-- copyright:           
category:            Utility
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     AdiumGM.Actions.Default
                     , AdiumGM.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , configurator
                     , configurator-export
                     , errors
                     , gogol
                     , gogol-gmail
                     , lens
                     , text
                     , text-format
                     , xml-conduit
                     , xml-types
  hs-source-dirs:      src
  default-language:    Haskell2010

executable adium-gmail
  main-is:             Main.hs
  other-modules:       Actions
                     , Opts
                     , Types
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                     , adium-gmail
                     , errors
                     , text
                     , optparse-applicative
                     , errors
  hs-source-dirs:      app
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

test-suite adium-gmail-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  other-modules:         AdiumGM.SpecsSpec
                       , AdiumGM.TypesSpec
  build-depends:         base
                       , adium-gmail
                       , errors
                       , lens
                       , text
                       , QuickCheck
                       , smallcheck
                       , hspec
  default-language:    Haskell2010

benchmark adium-gmail-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -O2
                       -threaded
                       -rtsopts
  hs-source-dirs:      bench
  main-is:             Bench.hs
  -- other-modules:         
  build-depends:         base
                       , adium-gmail
                       , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/adium-gmail
